# rpg-cpp

./: CMakeLists.txt
cmake/: conan_provider.cmake
model/: .clang-format  CMakeLists.txt  Class.cpp  Class.h  CoreItem.cpp  CoreItem.h  Equipable.cpp  Equipable.h  Hero.cpp  Hero.h  RPG_global.h  Stats.cpp  Stats.h
test/: CMakeLists.txt
test/ModelTests/: CMakeLists.txt  ModelTests.cpp
